# SimpleFS-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.py  makefile
.github/workflows/: main.yml
lib/: Cargo.toml
shell/: Cargo.toml
shell/src/: lib.rs  main.rs
simdisk/: .gitignore  Cargo.toml
simdisk/src/: bitmap.rs  block.rs  dirent.rs  file.rs  fs_constants.rs  inode.rs  main.rs  simple_fs.rs  super_block.rs  syscall.rs  user.rs
src/: bitmap.rs  block.rs  dirent.rs  file.rs  inode.rs  main.rs  simple_fs.rs  super_block.rs  syscall.rs
