[package]
name = "simdisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"]}
bincode = "1.3.3"
log = "0.4.20"
env_logger = "0.10.0"
bitflags = { version = "2.4.0", features = ["serde"]}
lazy_static = "1.4.0"
spin = "0.7.0"
chrono = "0.4.30"