[package]
name = "simdisk"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"]}
bincode = "1.3.3"
bitflags = { version = "2.4.0", features = ["serde"]}
lazy_static = "1.4.0"
chrono = "0.4.30"
async-recursion = "1.0.5"
bitmaps = "3.2.0"
tokio.workspace = true
pretty_env_logger.workspace = true
log.workspace = true
utils.workspace = true